<resources>
    <string name="app_name">Pokedex</string>
    <string name="title_activity_poke">PokeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Seuraava</string>
    <string name="previous">Edellinen</string>
    <string name="caught">Napattu</string>
    <string name="error">Tapahtui virhe, paina yrittääksesi uudelleen</string>

    <!-- Strings for the info page -->
    <string name="main">Etusivu</string>
    <string name="info">Tiedot</string>

    <string name="entry">Merkintä</string>
    <string name="type">Tyyppi</string>
    <string name="abilities">Kyvyt</string>
    <string name="heightweight">Pituus &amp; Paino</string>
    <string name="stats">Ominaisuudet</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>