<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C0000"
    tools:context=".PokeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:cardBackgroundColor="#F4F4F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backButton3"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/fira_code"
            android:onClick="goToMainPage"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:text="@string/main"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/fira_code"
            android:text="@string/info"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/caughtCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/fira_code"
            android:onClick="markCaughtPokemon"
            android:paddingEnd="7dp"
            android:text="@string/caught"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/pokemonContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCardView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:cardBackgroundColor="#F4F4F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="129dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/fira_code"
            android:layoutDirection="inherit"
            android:onClick="goToNextPage"
            android:text="@string/next"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="129dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/fira_code"
            android:onClick="goToPreviousPage"
            android:text="@string/previous"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>